--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -115,3 +115,9 @@
   height: 1em;
   margin-left: 0.5rem;
 }
+
+.hoge {
+  width: 30px;
+  height: 30px;
+  background: url('~/assets/images/icons.png') repeat;
+}
